versions/v4.2.0/doxygen/html/i3c_8h.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/i3c_8h.html
original_path: doxygen/html/i3c_8h.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

i3c.h File Reference

`#include <[errno.h](errno_8h_source.md)>`  
`#include <[stdint.h](stdint_8h_source.md)>`  
`#include <stddef.h>`  
`#include <[zephyr/device.h](device_8h_source.md)>`  
`#include <[zephyr/drivers/i3c/addresses.h](addresses_8h_source.md)>`  
`#include <[zephyr/drivers/i3c/error_types.h](error__types_8h_source.md)>`  
`#include <[zephyr/drivers/i3c/ccc.h](ccc_8h_source.md)>`  
`#include <[zephyr/drivers/i3c/devicetree.h](drivers_2i3c_2devicetree_8h_source.md)>`  
`#include <[zephyr/drivers/i3c/ibi.h](ibi_8h_source.md)>`  
`#include <[zephyr/drivers/i2c.h](drivers_2i2c_8h_source.md)>`  
`#include <[zephyr/sys/slist.h](slist_8h_source.md)>`  
`#include <[zephyr/sys/util.h](sys_2util_8h_source.md)>`  
`#include <[zephyr/rtio/rtio.h](rtio_2rtio_8h_source.md)>`  
`#include <[zephyr/drivers/i3c/target_device.h](target__device_8h_source.md)>`  
`#include <[zephyr/drivers/i3c/hdr_ddr.h](hdr__ddr_8h_source.md)>`  
`#include <zephyr/syscalls/i3c.h>`

[Go to the source code of this file.](i3c_8h_source.md)

| Data Structures | |
| --- | --- |
| struct | [i3c\_msg](structi3c__msg.md) |
|  | One I3C Message. [More...](structi3c__msg.md#details) |
| struct | [i3c\_config\_controller](structi3c__config__controller.md) |
|  | Configuration parameters for I3C hardware to act as controller. [More...](structi3c__config__controller.md#details) |
| struct | [i3c\_config\_custom](structi3c__config__custom.md) |
|  | Custom I3C configuration parameters. [More...](structi3c__config__custom.md#details) |
| struct | [i3c\_device\_id](structi3c__device__id.md) |
|  | Structure used for matching I3C devices. [More...](structi3c__device__id.md#details) |
| struct | [i3c\_device\_desc](structi3c__device__desc.md) |
|  | Structure describing a I3C target device. [More...](structi3c__device__desc.md#details) |
| struct | [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md) |
|  | Structure describing a I2C device on I3C bus. [More...](structi3c__i2c__device__desc.md#details) |
| struct | [i3c\_dev\_attached\_list](structi3c__dev__attached__list.md) |
|  | Structure for describing attached devices for a controller. [More...](structi3c__dev__attached__list.md#details) |
| struct | [i3c\_dev\_list](structi3c__dev__list.md) |
|  | Structure for describing known devices for a controller. [More...](structi3c__dev__list.md#details) |
| struct | [i3c\_driver\_config](structi3c__driver__config.md) |
|  | This structure is common to all I3C drivers and is expected to be the first element in the object pointed to by the config field in the device structure. [More...](structi3c__driver__config.md#details) |
| struct | [i3c\_driver\_data](structi3c__driver__data.md) |
|  | This structure is common to all I3C drivers and is expected to be the first element in the driver's struct driver\_data declaration. [More...](structi3c__driver__data.md#details) |
| struct | [i3c\_iodev\_data](structi3c__iodev__data.md) |

| Macros | |
| --- | --- |
| #define | [I3C\_MSG\_WRITE](group__i3c__transfer__api.md#ga72f9fb65d218521ad006febf3dd6851b)   (0U << 0U) |
|  | Write message to I3C bus. |
| #define | [I3C\_MSG\_READ](group__i3c__transfer__api.md#ga6ba89782a8646f96dc1f9fa3b9cd2058)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(0) |
|  | Read message from I3C bus. |
| #define | [I3C\_MSG\_STOP](group__i3c__transfer__api.md#ga0d4ae269a53af945837d158f638d8b5c)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(1) |
|  | Send STOP after this message. |
| #define | [I3C\_MSG\_RESTART](group__i3c__transfer__api.md#gad9ff03f4fdcb117b90c17d667a49c295)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(2) |
|  | RESTART I3C transaction for this message. |
| #define | [I3C\_MSG\_HDR](group__i3c__transfer__api.md#gad827935caf8503aeaedd1aceb53d4e38)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(3) |
|  | Transfer use HDR mode. |
| #define | [I3C\_MSG\_NBCH](group__i3c__transfer__api.md#ga4147e7cdf8155d2ef7c4dc7c08e16b6a)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(4) |
|  | Skip I3C broadcast header. |
| #define | [I3C\_MSG\_HDR\_MODE0](group__i3c__transfer__api.md#ga18aac0862826869f94e5a71670debcb0)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(0) |
|  | I3C HDR Mode 0. |
| #define | [I3C\_MSG\_HDR\_MODE1](group__i3c__transfer__api.md#ga8eb3dc48237dfdb25fde40a1efa03241)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(1) |
|  | I3C HDR Mode 1. |
| #define | [I3C\_MSG\_HDR\_MODE2](group__i3c__transfer__api.md#ga15cbd61e7d509c28b22fbc9e0844cb23)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(2) |
|  | I3C HDR Mode 2. |
| #define | [I3C\_MSG\_HDR\_MODE3](group__i3c__transfer__api.md#ga162fb9ab0e4ed7f8feb0e91d183a88e7)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(3) |
|  | I3C HDR Mode 3. |
| #define | [I3C\_MSG\_HDR\_MODE4](group__i3c__transfer__api.md#gabe45532238bc15672f6454dac70d20cf)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(4) |
|  | I3C HDR Mode 4. |
| #define | [I3C\_MSG\_HDR\_MODE5](group__i3c__transfer__api.md#gac712daa606d0c51ce523d7a687821282)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(5) |
|  | I3C HDR Mode 5. |
| #define | [I3C\_MSG\_HDR\_MODE6](group__i3c__transfer__api.md#ga7654c1947e13c019c24bf12712b0773b)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(6) |
|  | I3C HDR Mode 6. |
| #define | [I3C\_MSG\_HDR\_MODE7](group__i3c__transfer__api.md#ga08df1d8df82226d1f23b4cc923584672)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(7) |
|  | I3C HDR Mode 7. |
| #define | [I3C\_MSG\_HDR\_DDR](group__i3c__transfer__api.md#gac7386b21323d30148bd9456b9d180d7a)   [I3C\_MSG\_HDR\_MODE0](group__i3c__transfer__api.md#ga18aac0862826869f94e5a71670debcb0) |
|  | I3C HDR-DDR (Double Data Rate). |
| #define | [I3C\_MSG\_HDR\_TSP](group__i3c__transfer__api.md#gaa61322f770db296b5ab718c48ab960d3)   [I3C\_MSG\_HDR\_MODE1](group__i3c__transfer__api.md#ga8eb3dc48237dfdb25fde40a1efa03241) |
|  | I3C HDR-TSP (Ternary Symbol Pure-bus). |
| #define | [I3C\_MSG\_HDR\_TSL](group__i3c__transfer__api.md#gac43a2d266f3a23fd6dfa11405f3fd6f3)   [I3C\_MSG\_HDR\_MODE2](group__i3c__transfer__api.md#ga15cbd61e7d509c28b22fbc9e0844cb23) |
|  | I3C HDR-TSL (Ternary Symbol Legacy-inclusive-bus). |
| #define | [I3C\_MSG\_HDR\_BT](group__i3c__transfer__api.md#ga8b2fdcb827cbd3325f124a1c615698e7)   [I3C\_MSG\_HDR\_MODE3](group__i3c__transfer__api.md#ga162fb9ab0e4ed7f8feb0e91d183a88e7) |
|  | I3C HDR-BT (Bulk Transport). |
| #define | [I3C\_DEVICE\_ID](group__i3c__interface.md#gaed0df9802cc9b268abcfe4e877ebf498)(pid) |
|  | Structure initializer for [i3c\_device\_id](structi3c__device__id.md "Structure used for matching I3C devices.") from PID. |
| #define | [I3C\_BUS\_FOR\_EACH\_I3CDEV](group__i3c__interface.md#ga42cb4edf6a099d586df14456fd98c873)(bus, desc) |
|  | iterate over all I3C devices present on the bus |
| #define | [I3C\_BUS\_FOR\_EACH\_I2CDEV](group__i3c__interface.md#ga450ba9021d1080f890c32624f20ba2b8)(bus, desc) |
|  | iterate over all I2C devices present on the bus |
| #define | [I3C\_DT\_IODEV\_DEFINE](group__i3c__interface.md#gabec5796b92d4582761bc3de456f1df27)(name, node\_id) |
|  | Define an iodev for a given dt node on the bus. |
| Bus Characteristic Register (BCR) | |
| - BCR[7:6]: Device Role   - 0: I3C Target   - 1: I3C Controller capable   - 2: Reserved   - 3: Reserved - BCR[5]: Advanced Capabilities   - 0: Does not support optional advanced capabilities.   - 1: Supports optional advanced capabilities which can be viewed via GETCAPS CCC. - BCR[4]: Virtual Target Support   - 0: Is not a virtual target.   - 1: Is a virtual target. - BCR[3]: Offline Capable   - 0: Will always response to I3C commands.   - 1: Will not always response to I3C commands. - BCR[2]: IBI Payload   - 0: No data bytes following the accepted IBI.   - 1: One data byte (MDB, Mandatory Data Byte) follows the accepted IBI. Additional data bytes may also follows. - BCR[1]: IBI Request Capable   - 0: Not capable   - 1: Capable - BCR[0]: Max Data Speed Limitation   - 0: No Limitation   - 1: Limitation obtained via GETMXDS CCC. | |
| #define | [I3C\_BCR\_MAX\_DATA\_SPEED\_LIMIT](group__i3c__interface.md#ga91ebe41a421dc05ae7f1de1ce2dd314f)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(0) |
|  | Max Data Speed Limitation bit. |
| #define | [I3C\_BCR\_IBI\_REQUEST\_CAPABLE](group__i3c__interface.md#ga0c09de8a18ea1586e37d35e073ae641f)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(1) |
|  | IBI Request Capable bit. |
| #define | [I3C\_BCR\_IBI\_PAYLOAD\_HAS\_DATA\_BYTE](group__i3c__interface.md#gae119c230097cb8e1eab9fc45cafde838)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(2) |
|  | IBI Payload bit. |
| #define | [I3C\_BCR\_OFFLINE\_CAPABLE](group__i3c__interface.md#ga7b9fea89457022d8012ac25133bf63db)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(3) |
|  | Offline Capable bit. |
| #define | [I3C\_BCR\_VIRTUAL\_TARGET](group__i3c__interface.md#ga69dc4a5004da568684a3c72046bba870)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(4) |
|  | Virtual Target Support bit. |
| #define | [I3C\_BCR\_ADV\_CAPABILITIES](group__i3c__interface.md#ga07018705794753d0d0d65131f011e097)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(5) |
|  | Advanced Capabilities bit. |
| #define | [I3C\_BCR\_DEVICE\_ROLE\_I3C\_TARGET](group__i3c__interface.md#ga867b4b12b23c803b86b57dcc86b9e604)   0U |
|  | Device Role - I3C Target. |
| #define | [I3C\_BCR\_DEVICE\_ROLE\_I3C\_CONTROLLER\_CAPABLE](group__i3c__interface.md#ga0e64c8aa6717b96bcf9dad6c9ec7f852)   1U |
|  | Device Role - I3C Controller Capable. |
| #define | [I3C\_BCR\_DEVICE\_ROLE\_MASK](group__i3c__interface.md#ga25721c9963040c84b7f5bbb48bb87b44)   [GENMASK](group__sys-util.md#ga58530d20924859d16358c7400c37738d)(7U, 6U) |
|  | Device Role bit shift mask. |
| #define | [I3C\_BCR\_DEVICE\_ROLE](group__i3c__interface.md#ga90988b26dc2f388ec7c65387a24f05af)(bcr) |
|  | Device Role. |
| Legacy Virtual Register (LVR) | |
| Legacy Virtual Register (LVR)   - LVR[7:5]: I2C device index:   - 0: I2C device has a 50 ns spike filter where it is not affected by high frequency on SCL.   - 1: I2C device does not have a 50 ns spike filter but can work with high frequency on SCL.   - 2: I2C device does not have a 50 ns spike filter and cannot work with high frequency on SCL. - LVR[4]: I2C mode indicator:   - 0: FM+ mode   - 1: FM mode - LVR[3:0]: Reserved. | |
| #define | [I3C\_LVR\_I2C\_FM\_PLUS\_MODE](group__i3c__interface.md#ga9bf868ac6ae38e3f8ab6e5e1378bfb75)   0 |
|  | I2C FM+ Mode. |
| #define | [I3C\_LVR\_I2C\_FM\_MODE](group__i3c__interface.md#ga053945f5f67ee3c681de2c9362e69c39)   1 |
|  | I2C FM Mode. |
| #define | [I3C\_LVR\_I2C\_MODE\_MASK](group__i3c__interface.md#gaf073cc9ea1a68c57663c36de12554876)   [BIT](group__sys-util.md#ga3a8ea58898cb58fc96013383d39f482c)(4) |
|  | I2C Mode Indicator bitmask. |
| #define | [I3C\_LVR\_I2C\_MODE](group__i3c__interface.md#gaaf759805bb5824a89612b292a4439982)(lvr) |
|  | I2C Mode. |
| #define | [I3C\_LVR\_I2C\_DEV\_IDX\_0](group__i3c__interface.md#ga4319835ddb6b5984b21f5a5a2f14ae75)   0 |
|  | I2C Device Index 0. |
| #define | [I3C\_LVR\_I2C\_DEV\_IDX\_1](group__i3c__interface.md#ga02a21af4c679a81b8290beea30c8ef40)   1 |
|  | I2C Device Index 1. |
| #define | [I3C\_LVR\_I2C\_DEV\_IDX\_2](group__i3c__interface.md#ga5950bb8ceea5fcd3ceb38c7da0d9dd68)   2 |
|  | I2C Device Index 2. |
| #define | [I3C\_LVR\_I2C\_DEV\_IDX\_MASK](group__i3c__interface.md#ga50fa249b36b91d56e49004548a1c7520)   [GENMASK](group__sys-util.md#ga58530d20924859d16358c7400c37738d)(7U, 5U) |
|  | I2C Device Index bitmask. |
| #define | [I3C\_LVR\_I2C\_DEV\_IDX](group__i3c__interface.md#gae7afa509b1d63374c551bcdaf84c5dd1)(lvr) |
|  | I2C Device Index. |

| Enumerations | |
| --- | --- |
| enum | [i3c\_bus\_mode](group__i3c__interface.md#ga7a0d66ab45f618ca055422e2b69abe90) {     [I3C\_BUS\_MODE\_PURE](group__i3c__interface.md#gga7a0d66ab45f618ca055422e2b69abe90a879f2e1337e50df0df804b870ceb6445) , [I3C\_BUS\_MODE\_MIXED\_FAST](group__i3c__interface.md#gga7a0d66ab45f618ca055422e2b69abe90a913a67b18c3020d393ffab9edc970434) , [I3C\_BUS\_MODE\_MIXED\_LIMITED](group__i3c__interface.md#gga7a0d66ab45f618ca055422e2b69abe90ab64e923c332404da70d0b8266827a722) , [I3C\_BUS\_MODE\_MIXED\_SLOW](group__i3c__interface.md#gga7a0d66ab45f618ca055422e2b69abe90ad86533c65d9685bed06110056a0fd31a) ,     [I3C\_BUS\_MODE\_MAX](group__i3c__interface.md#gga7a0d66ab45f618ca055422e2b69abe90aa078a6108abc5f5783b4113b4b475697) = I3C\_BUS\_MODE\_MIXED\_SLOW , [I3C\_BUS\_MODE\_INVALID](group__i3c__interface.md#gga7a0d66ab45f618ca055422e2b69abe90a67e56000ca21354d218d48f26a95b36c)   } |
|  | I3C bus mode. [More...](group__i3c__interface.md#ga7a0d66ab45f618ca055422e2b69abe90) |
| enum | [i3c\_i2c\_speed\_type](group__i3c__interface.md#ga67686f0a5d83697361c655c3fd6e61c6) { [I3C\_I2C\_SPEED\_FM](group__i3c__interface.md#gga67686f0a5d83697361c655c3fd6e61c6af3e68696cdca6bd202bff26fa804d3e1) , [I3C\_I2C\_SPEED\_FMPLUS](group__i3c__interface.md#gga67686f0a5d83697361c655c3fd6e61c6ae28e3d134dd27348a45704402b49cbea) , [I3C\_I2C\_SPEED\_MAX](group__i3c__interface.md#gga67686f0a5d83697361c655c3fd6e61c6aa1826e175d88c25e26d09f044bd7c967) = I3C\_I2C\_SPEED\_FMPLUS , [I3C\_I2C\_SPEED\_INVALID](group__i3c__interface.md#gga67686f0a5d83697361c655c3fd6e61c6a9e4ffc7ed1f2ceed97944cda0cf547c4) } |
|  | I2C bus speed under I3C bus. [More...](group__i3c__interface.md#ga67686f0a5d83697361c655c3fd6e61c6) |
| enum | [i3c\_data\_rate](group__i3c__interface.md#gae9d98642c6f249ee0e6ea0dc491b5073) {     [I3C\_DATA\_RATE\_SDR](group__i3c__interface.md#ggae9d98642c6f249ee0e6ea0dc491b5073a7da0e8024e49d704c7f11e6f64e739c9) , [I3C\_DATA\_RATE\_HDR\_DDR](group__i3c__interface.md#ggae9d98642c6f249ee0e6ea0dc491b5073a7a18220be49deea188c386398846d301) , [I3C\_DATA\_RATE\_HDR\_TSL](group__i3c__interface.md#ggae9d98642c6f249ee0e6ea0dc491b5073ab20f2392a5729800a329b4b4a0a4e590) , [I3C\_DATA\_RATE\_HDR\_TSP](group__i3c__interface.md#ggae9d98642c6f249ee0e6ea0dc491b5073a583fe54dd65bd7805a747cfe7ec9663d) ,     [I3C\_DATA\_RATE\_HDR\_BT](group__i3c__interface.md#ggae9d98642c6f249ee0e6ea0dc491b5073ae6d5eb001045596bc01a8b26fdbf52ed) , [I3C\_DATA\_RATE\_MAX](group__i3c__interface.md#ggae9d98642c6f249ee0e6ea0dc491b5073a4b8e5152ac9e2a54fad142cc47b13725) = I3C\_DATA\_RATE\_HDR\_BT , [I3C\_DATA\_RATE\_INVALID](group__i3c__interface.md#ggae9d98642c6f249ee0e6ea0dc491b5073a511dd2b924d1d423adbaa841b941748a)   } |
|  | I3C data rate. [More...](group__i3c__interface.md#gae9d98642c6f249ee0e6ea0dc491b5073) |
| enum | [i3c\_config\_type](group__i3c__interface.md#ga5b111bc8fa8c3bee052e621d26dcc54a) { [I3C\_CONFIG\_CONTROLLER](group__i3c__interface.md#gga5b111bc8fa8c3bee052e621d26dcc54aaab2bdda67e4aa91f8fd43c110e2a25e5) , [I3C\_CONFIG\_TARGET](group__i3c__interface.md#gga5b111bc8fa8c3bee052e621d26dcc54aa0304077c1d277f6a0f80424879474d00) , [I3C\_CONFIG\_CUSTOM](group__i3c__interface.md#gga5b111bc8fa8c3bee052e621d26dcc54aa8decc53824153bb2582c9ce0e9b47017) } |
|  | Type of configuration being passed to configure function. [More...](group__i3c__interface.md#ga5b111bc8fa8c3bee052e621d26dcc54a) |

| Functions | |
| --- | --- |
| struct [i3c\_device\_desc](structi3c__device__desc.md) \* | [i3c\_dev\_list\_find](group__i3c__interface.md#ga9a451379bef381c6a264a22a2282fa89) (const struct [i3c\_dev\_list](structi3c__dev__list.md) \*dev\_list, const struct [i3c\_device\_id](structi3c__device__id.md) \*id) |
|  | Find a I3C target device descriptor by ID. |
| struct [i3c\_device\_desc](structi3c__device__desc.md) \* | [i3c\_dev\_list\_i3c\_addr\_find](group__i3c__interface.md#ga0e83c5a26b18acfbe7d532825a8fd54c) (const struct [device](structdevice.md) \*dev, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) addr) |
|  | Find a I3C target device descriptor by dynamic address. |
| struct [i3c\_device\_desc](structi3c__device__desc.md) \* | [i3c\_dev\_list\_i3c\_static\_addr\_find](group__i3c__interface.md#gaecbb16ce8edcd9ad7a7afcfb1251aa76) (const struct [device](structdevice.md) \*dev, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) addr) |
|  | Find a I3C target device descriptor by static address. |
| struct [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md) \* | [i3c\_dev\_list\_i2c\_addr\_find](group__i3c__interface.md#gafac78dca571ff7daa34fca0cfa7cc3b1) (const struct [device](structdevice.md) \*dev, [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) addr) |
|  | Find a I2C target device descriptor by address. |
| int | [i3c\_dev\_list\_daa\_addr\_helper](group__i3c__interface.md#ga3a4dac6aa35249e6e277da8075b596a8) (struct [i3c\_addr\_slots](structi3c__addr__slots.md) \*addr\_slots, const struct [i3c\_dev\_list](structi3c__dev__list.md) \*dev\_list, [uint64\_t](stdint_8h.md#a2095b9bffea4b2656950c6c0419edbf1) pid, [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) must\_match, [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) assigned\_okay, struct [i3c\_device\_desc](structi3c__device__desc.md) \*\*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*addr) |
|  | Helper function to find a usable address during ENTDAA. |
| static int | [i3c\_configure](group__i3c__interface.md#ga2f176f8440d86f4ec6c94a8911a75352) (const struct [device](structdevice.md) \*dev, enum [i3c\_config\_type](group__i3c__interface.md#ga5b111bc8fa8c3bee052e621d26dcc54a) type, void \*config) |
|  | Configure the I3C hardware. |
| static int | [i3c\_configure\_controller](group__i3c__interface.md#gaeca24930774ecc2dcbf2240d48ae19c5) (const struct [device](structdevice.md) \*dev, struct [i3c\_config\_controller](structi3c__config__controller.md) \*config) |
|  | Get the controller device configuration for an I3C device. |
| static int | [i3c\_configure\_target](group__i3c__interface.md#ga7dfa33c7bdbe7e6607af61fe04bcb985) (const struct [device](structdevice.md) \*dev, struct [i3c\_config\_target](structi3c__config__target.md) \*config) |
|  | Get the target device configuration for an I3C device. |
| static int | [i3c\_config\_get](group__i3c__interface.md#ga807877923755aeb5a065e054fb42946d) (const struct [device](structdevice.md) \*dev, enum [i3c\_config\_type](group__i3c__interface.md#ga5b111bc8fa8c3bee052e621d26dcc54a) type, void \*config) |
|  | Get configuration of the I3C hardware. |
| static int | [i3c\_config\_get\_controller](group__i3c__interface.md#ga96cd903b4a676c5943c43cc7b27af867) (const struct [device](structdevice.md) \*dev, struct [i3c\_config\_controller](structi3c__config__controller.md) \*config) |
|  | Get the controller device configuration for an I3C device. |
| static int | [i3c\_config\_get\_target](group__i3c__interface.md#ga8ef11af673e94646806e093504cfb01f) (const struct [device](structdevice.md) \*dev, struct [i3c\_config\_target](structi3c__config__target.md) \*config) |
|  | Get the target device configuration for an I3C device. |
| static int | [i3c\_recover\_bus](group__i3c__interface.md#ga7b23e08b10a09bde4e87328d6915aa25) (const struct [device](structdevice.md) \*dev) |
|  | Attempt bus recovery on the I3C bus. |
| int | [i3c\_attach\_i3c\_device](group__i3c__interface.md#ga042d1a3315f040562534ce08306b329c) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Attach an I3C device. |
| int | [i3c\_reattach\_i3c\_device](group__i3c__interface.md#gae6c8e8612368808117f4fce960e43769) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) old\_dyn\_addr) |
|  | Reattach I3C device. |
| int | [i3c\_detach\_i3c\_device](group__i3c__interface.md#ga6db9688cc7e9d34404717ae753751579) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Detach I3C Device. |
| int | [i3c\_attach\_i2c\_device](group__i3c__interface.md#ga5e69aaed50f99418c7123f652555ae20) (struct [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md) \*target) |
|  | Attach an I2C device. |
| int | [i3c\_detach\_i2c\_device](group__i3c__interface.md#ga8e8de45499bff02cac4c59c1758ec0a7) (struct [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md) \*target) |
|  | Detach I2C Device. |
| static int | [i3c\_do\_daa](group__i3c__interface.md#gabb54c0e85d0f5e8585391f9e5c20d4b6) (const struct [device](structdevice.md) \*dev) |
|  | Perform Dynamic Address Assignment on the I3C bus. |
| int | [i3c\_do\_ccc](group__i3c__interface.md#gaa6d5445489bfc8611c98b93f49305862) (const struct [device](structdevice.md) \*dev, struct [i3c\_ccc\_payload](structi3c__ccc__payload.md) \*payload) |
|  | Send CCC to the bus. |
| int | [i3c\_transfer](group__i3c__transfer__api.md#ga067c0f1e3c9abb6ef34ce48cb7e45cb8) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, struct [i3c\_msg](structi3c__msg.md) \*msgs, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) num\_msgs) |
|  | Perform data transfer from the controller to a I3C target device. |
| static struct [i3c\_device\_desc](structi3c__device__desc.md) \* | [i3c\_device\_find](group__i3c__interface.md#ga10a3963b749cc667a03975889d618d1b) (const struct [device](structdevice.md) \*dev, const struct [i3c\_device\_id](structi3c__device__id.md) \*id) |
|  | Find a registered I3C target device. |
| static int | [i3c\_ibi\_hj\_response](group__i3c__ibi.md#gac8c77e43fc7c06701437e799739507ee) (const struct [device](structdevice.md) \*dev, [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) ack) |
|  | ACK or NACK IBI HJ Requests. |
| static int | [i3c\_ibi\_raise](group__i3c__ibi.md#ga516c656231efd07429402c37643eca66) (const struct [device](structdevice.md) \*dev, struct [i3c\_ibi](structi3c__ibi.md) \*request) |
|  | Raise an In-Band Interrupt (IBI). |
| static int | [i3c\_ibi\_enable](group__i3c__ibi.md#ga7625ef0313ded1f638a6eb44395b02c0) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Enable IBI of a target device. |
| static int | [i3c\_ibi\_disable](group__i3c__ibi.md#ga037e156404324262694b4a5403821adc) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Disable IBI of a target device. |
| static int | [i3c\_ibi\_has\_payload](group__i3c__ibi.md#ga1a23e2ca2afb7cf371f523dcbcd7724f) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Check if target's IBI has payload. |
| static int | [i3c\_device\_is\_ibi\_capable](group__i3c__ibi.md#ga6c09d19ab1c7c19db4d085a30066345e) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Check if device is IBI capable. |
| static int | [i3c\_device\_is\_controller\_capable](group__i3c__ibi.md#ga537c1e2dafe3df1a5758e535beb323ea) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Check if the target is controller capable. |
| static int | [i3c\_write](group__i3c__transfer__api.md#gaa3b61aa9813ccb0df80562b0829d95dd) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*buf, [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) num\_bytes) |
|  | Write a set amount of data to an I3C target device. |
| static int | [i3c\_read](group__i3c__transfer__api.md#gaba39bd08ab50c5737ba617f4d27c3541) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*buf, [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) num\_bytes) |
|  | Read a set amount of data from an I3C target device. |
| static int | [i3c\_write\_read](group__i3c__transfer__api.md#ga3da2e99b667eab4fd92f5c0e1b57a8ea) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, const void \*write\_buf, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) num\_write, void \*read\_buf, [size\_t](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9) num\_read) |
|  | Write then read data from an I3C target device. |
| static int | [i3c\_burst\_read](group__i3c__transfer__api.md#ga3e4d985a784618efad67f8550f715115) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) start\_addr, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*buf, [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) num\_bytes) |
|  | Read multiple bytes from an internal address of an I3C target device. |
| static int | [i3c\_burst\_write](group__i3c__transfer__api.md#gaee773f95fcaf6cb88ced47f5c512c78c) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) start\_addr, const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*buf, [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) num\_bytes) |
|  | Write multiple bytes to an internal address of an I3C target device. |
| static int | [i3c\_reg\_read\_byte](group__i3c__transfer__api.md#ga87c1f23c94d37dfbaa22e4679fb8130a) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) reg\_addr, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*value) |
|  | Read internal register of an I3C target device. |
| static int | [i3c\_reg\_write\_byte](group__i3c__transfer__api.md#gaf7033eb93fd3779ffa98eb83e5a1a1b1) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) reg\_addr, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) value) |
|  | Write internal register of an I3C target device. |
| static int | [i3c\_reg\_update\_byte](group__i3c__transfer__api.md#ga4e0488ff21cbe99b206c115017473ed9) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) reg\_addr, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) mask, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) value) |
|  | Update internal register of an I3C target device. |
| void | [i3c\_dump\_msgs](group__i3c__transfer__api.md#ga61098371d2492a3f35c0fa779a88b348) (const char \*name, const struct [i3c\_msg](structi3c__msg.md) \*msgs, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) num\_msgs, struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Dump out an I3C message. |
| int | [i3c\_bus\_init](group__i3c__interface.md#ga9af9191a5ab2e5e2ea0478520721171d) (const struct [device](structdevice.md) \*dev, const struct [i3c\_dev\_list](structi3c__dev__list.md) \*[i3c\_dev\_list](structi3c__dev__list.md)) |
|  | Generic helper function to perform bus initialization. |
| int | [i3c\_device\_basic\_info\_get](group__i3c__interface.md#gaac5d10b8f42a6a069e0ac15cc7263db8) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Get basic information from device and update device descriptor. |
| int | [i3c\_device\_adv\_info\_get](group__i3c__interface.md#ga4e4a7e9408bd2f43602367bc9fe4f81e) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Get advanced information from device and update device descriptor. |
| static int | [i3c\_device\_info\_get](group__i3c__interface.md#ga39a760d8ba759f9443689fc954eb3d4b) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target) |
|  | Get all information from device and update device descriptor. |
| [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) | [i3c\_bus\_has\_sec\_controller](group__i3c__interface.md#ga149d70b1c2e02e19782aa21a94b13684) (const struct [device](structdevice.md) \*dev) |
|  | Check if the bus has a secondary controller. |
| int | [i3c\_bus\_rstdaa\_all](group__i3c__interface.md#ga14ec397e1c82b79302f7eff6022660ae) (const struct [device](structdevice.md) \*dev) |
|  | Reset all devices on the bus and clear their dynamic addresses. |
| int | [i3c\_bus\_setdasa](group__i3c__interface.md#ga2ae8b79140ddceebd071e0891a0ac824) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) dynamic\_addr) |
|  | Assign a dynamic address to a device using its static address. |
| int | [i3c\_bus\_setnewda](group__i3c__interface.md#ga55ba4babddb31ed83ad3fab5adce2f18) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) dynamic\_addr) |
|  | Assign a new dynamic address to a device. |
| int | [i3c\_bus\_setaasa](group__i3c__interface.md#gab6735824952836a1ac06745b21e2b534) (const struct [device](structdevice.md) \*dev) |
|  | Assign static addresses as dynamic addresses for all devices on the bus. |
| int | [i3c\_bus\_getbcr](group__i3c__interface.md#gac8c0ec6eb11030183be10fb541e1e561) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Retrieve the Bus Characteristics Register (BCR) of a device. |
| int | [i3c\_bus\_getdcr](group__i3c__interface.md#gaab2801ccc00e9891269709ecc34f4f7c) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Retrieve the Device Characteristics Register (DCR) of a device. |
| int | [i3c\_bus\_getpid](group__i3c__interface.md#ga129bab2c352fd08b62c352d916c7307c) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Retrieve the Provisional ID (PID) of a device. |
| int | [i3c\_bus\_getmrl](group__i3c__interface.md#ga5483ce25f70cae032ed5935483102c0f) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Retrieve the Maximum Read Length (MRL) of a device. |
| int | [i3c\_bus\_getmwl](group__i3c__interface.md#ga8d4da712075ee05896bcd7dde49cd827) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Retrieve the Maximum Write Length (MWL) of a device. |
| int | [i3c\_bus\_setmrl](group__i3c__interface.md#ga6fbb9bec228b7dc310c5724c3530bebd) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc, [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) mrl, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) ibi\_len) |
|  | Set the Maximum Read Length (MRL) for a device. |
| int | [i3c\_bus\_setmwl](group__i3c__interface.md#ga8002de8239c4a0d1178fba27092a1254) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc, [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) mwl) |
|  | Set the Maximum Write Length (MWL) for a device. |
| int | [i3c\_bus\_setmrl\_all](group__i3c__interface.md#ga28278e90417b01d7cb18a301f906f6ae) (const struct [device](structdevice.md) \*dev, [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) mrl, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) ibi\_len, [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) has\_ibi\_size) |
|  | Set the Maximum Read Length (MRL) for all devices on the bus. |
| int | [i3c\_bus\_setmwl\_all](group__i3c__interface.md#gad3a4bf3cfc1b150c19ff1186cc8e3e2a) (const struct [device](structdevice.md) \*dev, [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) mwl) |
|  | Set the Maximum Write Length (MWL) for all devices on the bus. |
| int | [i3c\_bus\_getacccr](group__i3c__interface.md#ga8d4356b56d8414e62b5a9931ffc7ab8b) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Retrieve the Active Controller's Dynamic Address (ACCCR). |
| int | [i3c\_bus\_deftgts](group__i3c__interface.md#ga554e0c4fa3e6855f431521ae42313216) (const struct [device](structdevice.md) \*dev) |
|  | Send the CCC DEFTGTS. |
| [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) | [i3c\_odd\_parity](group__i3c__interface.md#gaaf7736a8895de826f7fac1a9ecf0d7ea) ([uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) p) |
|  | Calculate odd parity. |
| int | [i3c\_device\_controller\_handoff](group__i3c__interface.md#gaedf58fdd96f38f103f8defe221427b6f) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*target, [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) requested) |
|  | Perform Controller Handoff. |
| void | [i3c\_sec\_handoffed](group__i3c__interface.md#ga221ab7abe735ddee881c002b934ee138) (struct [k\_work](structk__work.md) \*work) |
|  | Call back for when Controllership is Handoffed to itself. |
| struct [i3c\_device\_desc](structi3c__device__desc.md) \* | [i3c\_device\_desc\_alloc](group__i3c__interface.md#gab8e12d10528686040707f4aae502df98) (void) |
|  | Allocate memory for a i3c device descriptor. |
| void | [i3c\_device\_desc\_free](group__i3c__interface.md#ga25bfef54bb7bdc387ce0997ed0120739) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Free memory from a i3c device descriptor. |
| [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) | [i3c\_device\_desc\_in\_pool](group__i3c__interface.md#gaf2c8afec987322be8dfd4fb053fac61b) (struct [i3c\_device\_desc](structi3c__device__desc.md) \*desc) |
|  | Report if the i3c device descriptor was from a mem slab. |
| struct [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md) \* | [i3c\_i2c\_device\_desc\_alloc](group__i3c__interface.md#ga16b9ba6480ac807ff8b9268d6cffa577) (void) |
|  | Allocate memory for a i3c i2c device descriptor. |
| void | [i3c\_i2c\_device\_desc\_free](group__i3c__interface.md#ga61ead89539fe3556f5e6e30eae5e71a3) (struct [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md) \*desc) |
|  | Free memory from a i3c i2c device descriptor. |
| [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) | [i3c\_i2c\_device\_desc\_in\_pool](group__i3c__interface.md#gabfebceaa3e6f6f255352b8dcc3e7f9b1) (struct [i3c\_i2c\_device\_desc](structi3c__i2c__device__desc.md) \*desc) |
|  | Report if the i3c i2c device descriptor was from a mem slab. |
| void | [i3c\_iodev\_submit\_fallback](group__i3c__interface.md#ga909d531941cd81850f4a05c51646690d) (const struct [device](structdevice.md) \*dev, struct [rtio\_iodev\_sqe](structrtio__iodev__sqe.md) \*iodev\_sqe) |
|  | Fallback submit implementation. |
| static void | [i3c\_iodev\_submit](group__i3c__interface.md#ga3b612267e71202094fb4adab64ffd61c) (struct [rtio\_iodev\_sqe](structrtio__iodev__sqe.md) \*iodev\_sqe) |
|  | Submit request(s) to an I3C device with RTIO. |
| struct [rtio\_sqe](structrtio__sqe.md) \* | [i3c\_rtio\_copy](group__i3c__interface.md#gab46a231442a7bf60e7e28ca2f52d25fc) (struct [rtio](structrtio.md) \*[r](asm-macro-32-bit-gnu_8h.md#af16d2973cfd145a2ebdbf9528d5d9ae2), struct [rtio\_iodev](structrtio__iodev.md) \*iodev, const struct [i3c\_msg](structi3c__msg.md) \*msgs, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) num\_msgs) |
|  | Copy the i3c\_msgs into a set of RTIO requests. |

| Variables | |
| --- | --- |
| const struct [rtio\_iodev\_api](structrtio__iodev__api.md) | [i3c\_iodev\_api](group__i3c__interface.md#gace1f8f10af2d87bb5a17441645030833) |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [drivers](dir_49c63ef737d38af1498bd111c90a6556.md)
- [i3c.h](i3c_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
